added month and day to single post

--- a/src/js/app/templates/postPage.handlebars
+++ b/src/js/app/templates/postPage.handlebars
@@ -9,13 +9,26 @@
 <article class="single-post">
   <div class="row">
     <div class="col-sm-12 col-lg-3 card">
-      <img src="{{post.imageUrl}}" alt="Post image">
+      <div class="image">
+        <img src="{{post.imageUrl}}" alt="Post image">
+        <span class="category">
+<a href="#">{{post.category}}</a>  
+        </span>
+        <span class="month">SEP</span>
+        <span class="day">22</span>
+      </div>
       <div class="tags">
         <h4>Tags</h4>
         <span>Business</span>
         <span>Banks</span>
         <span>UK</span>
         <span>USA</span>
+      </div>
+      <div>
+        <h4>Related posts</h4>
+        <a href="#">First</a>
+        <a href="#">Second</a>
+        <a href="#">Third</a>
       </div>
     </div>
     <div class="col-sm-12 col-lg-9 card">
