--- a/src/sass/_custom.scss
+++ b/src/sass/_custom.scss
@@ -34,7 +34,7 @@ input.search {
     }
 }
 
-.navbar-nav{
+.navbar-nav {
     a {
         font-family: $secondary-font;
         color: $white;
@@ -123,7 +123,6 @@ input.search {
         color: #212121;
         border-bottom: 1px dotted #BCBCBC
     }
-
     .post-text {
         font-family: $main-font;
         font-size: 13px;
@@ -154,45 +153,78 @@ input.search {
     }
 }
 
-.single-post{
+.single-post {
     width: 70%;
     font-family: $secondary-font;
-
-    h1{
+    h1 {
         text-transform: uppercase;
         color: #9a1d0d;
-
     }
-    img{
+    img {
         width: 100%;
         height: auto;
     }
-
     .card {
         border-left: 0;
         border-right: 0;
         padding: 2.5rem;
         border-radius: 0px;
-        .author{
+        .image {
+            position: relative;
+            border: 3px solid #efefef;
+            span.category{
+                position: absolute;
+                top: -3px;
+                right: -1px;
+                a {
+                    text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);
+                    text-decoration: none;
+                    text-transform: uppercase;
+                    color: $white;
+                    font-size: 20px;
+                    background-color: #9a1d0d;
+                    margin: 0px;
+                    padding: 0px 8px 0px 12px;
+                }
+            }
+            span.month {
+                color: $white;
+                font-size: 48px;
+                text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);
+                position: absolute;
+                top: 14px;
+                right: 8px;
+                
+            }
+            span.day {
+                color: $white;
+                font-size: 48px;
+                text-shadow: 1px 2px 4px rgba(0, 0, 0, 0.3);
+                position: absolute;
+                top: 58px;
+                right: 8px;
+            }
+        }
+        .author {
             text-transform: uppercase;
             color: #212121;
             border-bottom: 1px dotted #BCBCBC;
             padding-bottom: 0.5rem;
         }
-        .content{
+        .content {
             padding-top: 0.5rem;
             font-size: 0.8rem;
             font-family: $main-font;
             color: #837e7e;
         }
-        .tags{
+        h4 {
+            text-transform: uppercase;
+            padding-top: 0.7rem;
+            color: #212121;
+        }
+        .tags {
             margin-top: 0.5rem;
             font-family: $secondary-font;
-            h4 {
-                text-transform: uppercase;
-                padding-top: 0.7rem;
-                color: #212121;
-            }
             span {
                 text-transform: uppercase;
                 color: #6e6e6e;
@@ -218,7 +250,6 @@ input.search {
     background: none;
     margin-bottom: 0.5rem;
     padding: 0 1.5rem;
-
     a {
         text-decoration: none;
         text-transform: capitalize;
